[tool.poetry]
name = "fastapi-todo-application"
version = "0.1.0"
description = ""
authors = ["Fazalwahab12 < wahabdir567@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
